# 04_best_practices

./: docker-compose.dev.yaml  docker-compose.prod.yaml  docker.md  sbom-back-0.0.5.json
.github/workflows/: backend-ci.yaml  frontend-ci.yaml  linting.yaml
backend/: Dockerfile.advanced  Dockerfile.advancedv2  Dockerfile.basic  Dockerfile.chiselled.full  Dockerfile.standard  Dockerfile.standardv2  main.py  pyproject.toml
backend/models/: svc_iris.onnx
backend/routes/: inference.py
frontend/: Dockerfile.advanced  Dockerfile.advancedv2  Dockerfile.basic  Dockerfile.chiselled  Dockerfile.chiselled.full  Dockerfile.standard  Dockerfile.standardv2  sbom-0.0.7.json  sbom-back-0.0.5.json  sbom-back-0.0.7.json
frontend/tests/: cst-advanced.yaml  cst-advancedv2.yaml  cst-basic.yaml  cst-standardv2.yaml
models/: converted.py  cve-backend.json  install.sh  makefile  oras_oci.py  pyproject.toml  svc_iris.onnx  train.py
models/cve/: cve.json
models/sbom/: sbom.json
