[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "joblib>=1.4.2",
  "onnxruntime>=1.20.1",
  "oras>=0.2.25",
  "pydantic>=2.10.6",
  "ruff>=0.9.5",
  "scikit-learn>=1.6.1",
  "skl2onnx>=1.18.0",
]

[dependency-groups]
dev = ["isort>=6.0.0", "mypy>=1.15.0", "ruff>=0.9.5"]
